Platform 1.15

* RelativeUriBuilder

  We created RelativeUriBuilder for building the relative URIs needed by
  BalancingHttpClient.

* Bootstrap

  We created Bootstrap.bootstrapApplication(Class<T>, Function<T, String>)
  for setting the application name based on configuration.

Platform 1.14

* JAX-RS

  We created JaxrsBinder.bindInjectionProvider() to support JAX-RS Custom
  Injection Providers. Use this to bind a type to a Supplier of that type.
  The objects returned from the Supplier will be field and method injected
  by Jersey and any PostConstruct and PreDestroy methods will be called at
  the appropriate time.

  We now enable the JAX-RS MIME Multipart support.

Platform 1.13

* HttpClient

  Using a BodyGenerator that is not a StaticBodyGenerator with JettyHttpClient
  when there are more concurrent requests than half the maximum threads in the
  thread pool can lead to deadlocks. To mitigate this, we have made the
  following changes:

  - We created a new marker interface BodySource.
  - BodyGenerator extends BodySource.
  - We created the interface DynamicBodySource to replace BodyGenerator.
  - We deprecated BodyGenerator. Consumers should use BodySource instead.
    Producers should recode to use DynamicBodySource.
  - We deprecated StaticBodyGenerator.write(OutputStream).
    StaticBodyGenerator is not deprecated, but after the deprecation period
    it may extend BodySource instead of BodyGenerator.
  - We deprecated Request.getBodyGenerator(). Use the newly created
    Request.getBodySource() instead.
  - We deprecated Request.Builder.setBodyGenerator(BodyGenerator). Use
    Request.Builder.setBodySource(BodySource) instead. This change will
    probably have a longer than usual deprecation period.
  - We replaced SingleUseBodyGenerator with the LimitedRetryable interface.
  - We created InputStreamBodySource for reading the body from an
    InputStream. HttpClient implementations will not call close() on the
    InputStream.