@@ -10,6 +10,8 @@ Platform 1.15
   We created Bootstrap.bootstrapApplication(Class<T>, Function<T, String>)
   for setting the application name based on configuration.
 
+* We reimplemented SmileBodyGenerator to be a StaticBodyGenerator.
+
 Platform 1.14
 
 * JAX-RS
